# book_db

./: .gitignore  Cargo.toml
.github/workflows/: general.yml
lang/: en.toml
scripts/: avg_render_time.py  style_analysis.py
src/: app.rs  author.rs  book.rs  bookauthor.rs  column.rs  db.rs  domain.rs  fex.rs  fexp.rs  file_explorer.rs  log.rs  main.rs  options.rs  person.rs  publisher.rs  table.rs  threading.rs  ui.rs  widgets.rs
src/column/: column_info.rs  column_list.rs
src/domain/: bookperson.rs
src/errors/: app_error.rs  backend.rs  mod.rs  navigation.rs
src/events/: event_handling.rs  mod.rs
src/events/input/: input_context.rs  key_bindings.rs
src/fex/: fex_table.rs  fexdata.rs  fextable.rs
src/fexp/: fexptable.rs
src/file_explorer/: file_explorer_data.rs  file_explorer_table.rs
src/lang/: language.rs
src/perf/: mod.rs  resources.rs  statistics.rs
src/row/: mod.rs  row_info.rs  row_list.rs
src/table/: mod.rs  table_info.rs  table_list.rs
src/traits/: color_scheme.rs  mod.rs  styled_row.rs  writeable.rs
src/ui/: app.rs  app_styles.rs  colors.rs  colorscheme.rs  draw.rs  events.rs  input.rs  mod.rs  render.rs  utils.rs
src/ui/colors/: app_colors.rs  colors.rs  dynamic_colors.rs  mod.rs  (+1 more)
src/utils/: bk_tree.rs  edit_distance.rs  log.rs  mod.rs
src/widgets/: create_db_form.rs  create_table_form.rs  drop_table_form.rs  generic_list_view.rs  mod.rs  row_delete_form.rs  selectable_field.rs  selectable_line.rs  single_field_form.rs  table_delete_form.rs  table_insert_form.rs  text_box.rs  text_entry_field.rs  text_form.rs
(+7 files in other folders)
