[package]
name = "sqlite_book_db"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
palette = "0.7.6"
ratatui = "0.29.0"
unicode-width = "0.2.0"
chrono = "0.4.38"
strum = "0.26.3"
strum_macros = "0.26.4"
directories-next = "2.0.0"
toml = "0.9.5"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled"]
